--- a/Leads tracker/manifest.json
+++ b/Leads tracker/manifest.json
@@ -1,14 +1,26 @@
 {
     "manifest_version": 3,
-    "version": "1.0.1",
-    "name": "Leads tracker",
-    "icon": {
+    "name": "Leads Tracker",
+    "version": "1.0",
+    "description": "Chrome Extension for Tracking Leads",
+    "icons": {
         "48": "images/icon.png"
     },
-    "action": {
+    "browser_action": {
+        "default_popup": "index.html",
         "default_icon": {
-            "48": "images/icon.png"
-        },
-        "default_title": "Leads tracker"
-    }
+            "16": "images/icon.png",
+            "48": "images/icon.png",
+            "128": "images/icon.png"
+        }
+    },
+    "permissions": [
+        "activeTab"
+    ],
+    "content_scripts": [
+        {
+            "matches": ["https://www.awesome.com", "https://www.website.com"],
+            "js": ["content.js", "script.js"]
+        }
+    ]
 }
