--- a/Leads tracker/manifest.json
+++ b/Leads tracker/manifest.json
@@ -1,26 +1,20 @@
 {
-    "manifest_version": 3,
-    "name": "Leads Tracker",
-    "version": "1.0",
-    "description": "Chrome Extension for Tracking Leads",
-    "icons": {
-        "48": "images/icon.png"
-    },
-    "browser_action": {
-        "default_popup": "index.html",
-        "default_icon": {
-            "16": "images/icon.png",
-            "48": "images/icon.png",
-            "128": "images/icon.png"
-        }
-    },
-    "permissions": [
-        "activeTab"
-    ],
-    "content_scripts": [
-        {
-            "matches": ["https://www.awesome.com", "https://www.website.com"],
-            "js": ["content.js", "script.js"]
-        }
-    ]
+  "manifest_version": 3,
+  "name": "Leads Tracker",
+  "version": "1.0",
+  "description": "Chrome Extension for Tracking Leads",
+  "icons": {
+    "48": "images/icon.png"
+  },
+  "action": {
+    "default_popup": "index.html",
+    "default_icon": {
+      "16": "images/icon.png",
+      "48": "images/icon.png",
+      "128": "images/icon.png"
+    }
+  },
+  "permissions": [
+    "tabs"
+  ]
 }
